crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_raw_pre_blockquote_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..24
  BLOCK_QUOTE@0..24
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK_RAW@2..24
      HTML_BLOCK_TAG@2..8
        TEXT@2..7 "<pre>"
        NEWLINE@7..8 "\n"
      HTML_BLOCK_CONTENT@8..15
        LINE_PREFIX@8..9 ">"
        LINE_PREFIX@9..10 " "
        TEXT@10..14 "code"
        NEWLINE@14..15 "\n"
      HTML_BLOCK_TAG@15..24
        LINE_PREFIX@15..16 ">"
        LINE_PREFIX@16..17 " "
        TEXT@17..23 "</pre>"
        NEWLINE@23..24 "\n"
