crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_section_blockquote_multiline_open_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..43
  BLOCK_QUOTE@0..43
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK@2..43
      HTML_BLOCK_TAG@2..11
        TEXT@2..10 "<section"
        NEWLINE@10..11 "\n"
      HTML_BLOCK_CONTENT@11..43
        LINE_PREFIX@11..12 ">"
        LINE_PREFIX@12..13 " "
        TEXT@13..22 "  id=\"x\">"
        NEWLINE@22..23 "\n"
        LINE_PREFIX@23..24 ">"
        LINE_PREFIX@24..25 " "
        TEXT@25..29 "body"
        NEWLINE@29..30 "\n"
        LINE_PREFIX@30..31 ">"
        LINE_PREFIX@31..32 " "
        TEXT@32..42 "</section>"
        NEWLINE@42..43 "\n"
