crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_strict_block_blockquote_messy_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..47
  BLOCK_QUOTE@0..47
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK@2..47
      HTML_BLOCK_TAG@2..28
        TEXT@2..27 "<section id=\"sec-a\">f ..."
        NEWLINE@27..28 "\n"
      HTML_BLOCK_CONTENT@28..47
        LINE_PREFIX@28..29 ">"
        LINE_PREFIX@29..30 " "
        TEXT@30..46 "second</section>"
        NEWLINE@46..47 "\n"
