crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_inline_span_attr_name_blockquote_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..39
  BLOCK_QUOTE@0..39
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    PARAGRAPH@2..39
      TEXT@2..25 "<span _bad=x id=hidden>"
      STRONG@25..31
        STRONG_MARKER@25..27 "**"
        TEXT@27..29 "hi"
        STRONG_MARKER@29..31 "**"
      INLINE_HTML@31..38
        INLINE_HTML_CONTENT@31..38 "</span>"
      NEWLINE@38..39 "\n"
